Update geometrisktilgang.tex, simplex_metoden.tex, and 7 more files...

--- a/incl/main/simplex_metoden/geometrisktilgang.tex
+++ b/incl/main/simplex_metoden/geometrisktilgang.tex
@@ -35,6 +35,12 @@ c_j^* = c_j - \mathbf{c}_B^T B^{-1} \mathbf{A}_j.
 \end{defn}
 \noindent
 %
-% Noget mere tekst her 
-% Det med simplextabellen
 Simplexmetoden afsøger dermed hjørnerne på denne vis, hvilket kan bevises, dette er dog udenfor rapportens sigte.
+
+
+
+	\input{incl/main/simplex_metoden/thm_3.1}
+	
+	
+	\input{incl/main/simplex_metoden/thm_3.2}
+	\input{incl/main/simplex_metoden/thm_3.3}
