--- a/incl/main/simplex_metoden/simplex_metoden.tex
+++ b/incl/main/simplex_metoden/simplex_metoden.tex
@@ -1,9 +1,19 @@
 \chapter{Simplexmetoden}
 \label{coronaaaaaaaaaaa}
 %
-% Introducerende simplexmetoden
+Som vist i afsnit \ref{klogskab}, findes der en optimal løsning til et lineært ligningssystem på standardform, så længe der findes mindst én basal mulig løsning. 
+\textit{Simplexmetoden} benytter sig af denne egenskab og søger at finde den optimale løsning.
+Dette kapitel tager udgangspunkt i \citep[side 25-34]{lial} og \citep[side 82-87 og 94-100]{bert}, hvis ikke andet er angivet.
+Bemærk, at afsnit \ref{afsnittet} tager afsæt i et maksimumsproblem, imens øvrige afsnit tager udgangspunkt i minimumsproblemer.
+%
+% Geometrisk tilgang til simplexmetoden
 % ---------------------------------------------------------
-	\input{incl/main/simplex_metoden/simplex_metoden_intro}
+	\input{incl/main/simplex_metoden/geometrisktilgang}
+%
+%
+% Eksempel til simplexmetoden
+% ---------------------------------------------------------
+	\input{incl/main/simplex_metoden/simplex_metoden_eksempel}
 %
 %
 % Typer af simplexmetoden
