Update simplex_metoden_eksempel.tex and simplex_metoden_typer.tex

--- a/incl/main/simplex_metoden/simplex_metoden_eksempel.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_eksempel.tex
@@ -2,8 +2,14 @@
 \label{afsnittet}
 Simplexmetoden foretager som udgangspunkt følgende seks trin, inden den afsluttes:
 %
-\begin{col}{Simplexmetoden}{}
-%
+\begin{tcolorbox}[
+title=Simplexmetoden,
+colback		= myblue!15,
+colframe	= myblue!15,
+coltitle	= black,
+before skip	= 20pt plus 2pt,
+after skip	= 20pt plus 2pt,
+fonttitle	= \bfseries]
 % Denne skal eventuelt beskrives mere i dybdegående - Tager kort tid.
 \begin{enumerate}
 \item Omskriv optimeringsproblemet til standardform med slack-variable.  %1
@@ -14,7 +20,7 @@ Simplexmetoden foretager som udgangspunkt følgende seks trin, inden den afslutt
 \item Identificér den optimale løsning.									 %6
 \end{enumerate}
 %
-\end{col}
+\end{tcolorbox}
 \noindent
 %
 I følgende afsnit uddybes ovenstående punkter, samt tilhørende teori, med udgangspunkt i \ref{haribooooo}.
