Update aktiv.tex, degenerering_r2.tex, and 13 more files...

--- a/fig/tikz/geometri/hyperplan_r2.tex
+++ b/fig/tikz/geometri/hyperplan_r2.tex
@@ -1,5 +1,5 @@
 \begin{center}
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=1.5]
 % Den øverste linje
 \draw[name path=b,-, white, thick] (0,3.5) -- (6,3.5);
 %
