--- a/incl/main/appendicer/apend_b.tex
+++ b/incl/main/appendicer/apend_b.tex
@@ -11,11 +11,11 @@ Følgende udvalgte egenskaber ved lineært afhængige og uafhængige mængder, e
 
 \chapter{Vigtig sætning}
 %
-Følgende udvalgte sætning omhandlende span samt dimension er vigtig i forhold til visse egenskaber nævnt i rapporten.
+\ref{thm:spandim}, der omhandler spannet og dimensionen, er vigtig i forhold til visse egenskaber nævnt i rapporten.
 \begin{thm}{}{spandim}
-Antag, at spannet $\S$ af vektorerne $\mathbf{x}^1,\ldots,\mathbf{x}^k$ har dimension $m$, så gælder det, at 
+Antag, at spannet $\S$ af vektorerne $\mathbf{x}_1,\ldots,\mathbf{x}_K$ har dimension $m$, så gælder det, at 
 \begin{enumerate}[label=(\alph*)]
-    \item Der eksisterer en basis af $\S$ indeholdende $m$ af vektorerne $\mathbf{x}^1,\ldots,\mathbf{x}^k$
-    \item Hvis k $\leq$ m og $\mathbf{x}^1,\ldots,\mathbf{x}^k$ er lineært uafhængige, kan der dannes en basis af $\S$ ved at starte med $\mathbf{x}^1,\ldots,\mathbf{x}^k$, og dernæst vælge $m-k$ af vektorerne $\mathbf{x}^{k+1},\ldots,\mathbf{x}^{K+1}$
+    \item Der eksisterer en basis af $\S$, som indeholder $m$ af vektorerne $\mathbf{x}_1,\ldots,\mathbf{x}_K$.
+    \item Hvis $k \leq m$ og $\mathbf{x}_1,\ldots,\mathbf{x}_k$ er lineært uafhængige, kan der dannes en basis af $\S$ ved at starte med $\mathbf{x}_1,\ldots,\mathbf{x}_k$, og dernæst vælge $m-k$ af vektorerne $\mathbf{x}_{k+1},\ldots,\mathbf{x}_{K}$.
 \end{enumerate}
 \end{thm}{}
