--- a/incl/main/grafisk_losning/Konvekse_maengder.tex
+++ b/incl/main/grafisk_losning/Konvekse_maengder.tex
@@ -51,6 +51,7 @@ Af \ref{defn:konvekskombihylster} følger \ref{thm:konveks}.
 \end{thm}
 %
 %
+\newpage
 \begin{proof}
 \begin{enumerate}[label=(\alph*)]
 \item Lad $I$ være en indeksmængde, lad $\S_i$, $i \in I$, være konvekse mængder, og lad $ \lambda \in [0,1]$.
