--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -2,7 +2,7 @@
 %
 I lineær programmering er målet at optimere en lineær funktion afgrænset af \textit{lineære betingelser}.
 Dette kapitel tager udgangspunkt i \citep[side 2-6, 21-24 og 139-146]{bert}, hvis ikke andet er angivet.
-Funktionen, som optimeres, kaldes \textit{objektfunktionen}.
+Funktionen $z$, som optimeres, kaldes \textit{objektfunktionen}.
 Objektfunktionen kan enten maksimeres eller minimeres, og er begrænset af de lineære betingelser.
 Findes henholdsvis et maksimum eller minimum inden for begrænsningerne, er dette problemets \textit{optimale værdi}.
 \\\\
@@ -20,7 +20,7 @@ Et lineært maksimumsproblem kan opstilles som følgende:
 \end{array}
 \end{align*}
 %
-hvor $\textbf{c}^T\textbf{x}$ er objektfunktionen og $\textbf{a}^T\textbf{x}$ er de lineære betingelser, samt $M_1, M_2, M_3, N_1, N_2$ er endelige mængder med indekser.
+hvor $\textbf{c}^T\textbf{x}$ er objektfunktionen, \textcolor{red}{$z$ er omkostningen} og $\textbf{a}^T\textbf{x}$ er de lineære betingelser, samt $M_1, M_2, M_3, N_1, N_2$ er endelige mængder med indekser.
 \textit{Løsningsmængden} betegner mængden af vektorer, som opfylder alle betingelserne.
 Vektorer indeholdt i løsningsmængden kaldes for \textit{løsningsvektorer}.
 Hvis værdiområdet er uendeligt stort, er optimeringsproblemet \textit{ubegrænset}; ellers er det \textit{begrænset}. 
