--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -66,7 +66,7 @@ Som følge af \ref{thm:polystd} kan basale løsninger konstrueres ved hjælp af 
 \end{enumerate}
 %
 Findes en ikke-negativ løsning ved denne procedure, så er løsningen en basal mulig løsning.
-Søjlerne $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}$ kaldes for \textit{basisvariablene}.
+\textcolor{red}{Søjlerne $\textbf{A}_{B(1)},\ldots,\textbf{A}_{B(m)}$ kaldes for \textit{basissøjlerne}, og variablerne $x_{B(1)},\ldots,x_{B(m)}$ kaldes for \textit{basisvariablerne}. De resterende søjler i $A$ kaldes derimod \textit{ikke-basale søjler} og de resterende variabler kaldes \textit{ikke-basale variable}. }
 Hvert valg af de lineært uafhængige søjler svarer til forskellige baser for rummet.
 \\\\
 %
