--- a/incl/main/linear_algebra/invertibilitet.tex
+++ b/incl/main/linear_algebra/invertibilitet.tex
@@ -13,10 +13,11 @@ Hvis en funktion er både injektiv og surjektiv, så er funktionen \textbf{bijek
 \end{defn}
 \noindent
 %
-Hvis en funktion $f:\R^n \rightarrow \R^m$ er bijektiv, vil det betyde at der er en invers funktion $f^{-1}:\R^m \rightarrow \R^n$ hvorom det gælder at $f^{-1}(f(x))=x$. Dette gælder da for hver vektor i $\R^n$ afbilleder én vektor i $\R^m$, og det omvendte gælder også da værdimængden er hele $\R^m$, så uanset hvilken vektor i $\R^m$ ville den have en tilsvarende vektor i $\R^n$.\\
+Hvis en funktion $f:\R^n \rightarrow \R^m$ er bijektiv, vil det betyde at der er en invers funktion $f^{-1}:\R^m \rightarrow \R^n$, hvorom det gælder at $f^{-1}(f(x))=x$. 
+Dette gælder, da for hver vektor i $\R^n$ afbilleder én vektor i $\R^m$, og det omvendte gælder også, da værdimængden er hele $\R^m$, så uanset, hvilken vektor i $\R^m$ ville den have en tilsvarende vektor i $\R^n$.
+%
 Illustrationen på figur \ref{fig:afbild}, er dermed ikke injektiv, eftersom der til hvert $y$ ikke kun er et $x$. 
 %
-% DER MANGLER ALTSÅ NOGET HER ??
 %
 Bemærk, at
 $$f^{-1} \neq \frac{1}{f},$$
